--- a/#src/team.html
+++ b/#src/team.html
@@ -52,17 +52,20 @@
                             <a href="#" class="btn btn--second " data-filter-trigger="3">Ортодонты</a>
                         </li>
                         <li>
-                            <a href="#" class="btn btn--second " data-filter-trigger="4">Имплантологи</a>
+                            <a href="#" class="btn btn--second " data-filter-trigger="4">Имплантологи</a> 
                         </li>
                         <li>
-                            <a href="#" class="btn btn--second " data-filter-trigger="5">Ассистенты</a>
+                            <a href="#" class="btn btn--second " data-filter-trigger="5">Врачи</a>
                         </li>
                         <li>
-                            <a href="#" class="btn btn--second " data-filter-trigger="6">Администраторы</a>
+                            <a href="#" class="btn btn--second " data-filter-trigger="6">Ассистенты</a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn btn--second " data-filter-trigger="7">Админы</a>
                         </li>
                     </ul>
                     <ul class="team-list">
-                        <li data-filter-content="0,1,2,4">
+                        <li data-filter-content="0,1,2,4,5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-1.png",
                                 "name": "Саид Гаджиевич Шахаев",
@@ -72,7 +75,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="3">
+                        <li data-filter-content="3,5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-2.png",
                                 "name": "Нина Владимировна Перельштейн",
@@ -82,7 +85,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="0,2">
+                        <li data-filter-content="0,2,5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-3.png",
                                 "name": "Керим Гаджимагомедович Гасанов ",
@@ -92,7 +95,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="0">
+                        <li data-filter-content="0,5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-4.png",
                                 "name": "Мария Вячеславовна Екимова (Гогия)",
@@ -102,7 +105,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="0">
+                        <li data-filter-content="0,5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-5.png",
                                 "name": "Зарина Муратовна Маргиева",
@@ -112,7 +115,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="1,2">
+                        <li data-filter-content="1,2.7">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-6.png",
                                 "name": "Имима Гаджимагомедович Магомедов ",
@@ -122,7 +125,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="5">
+                        <li data-filter-content="6">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-7.png",
                                 "name": "Наргиз Теймуровна Яхьяева ",
@@ -132,7 +135,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="5">
+                        <li data-filter-content="6">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-8.png",
                                 "name": "Илона Валерьевна Ростова ",
@@ -142,7 +145,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="5">
+                        <li data-filter-content="6">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-9.png",
                                 "name": "Алиса Дмитриевна Кондакова ",
@@ -152,7 +155,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="5">
+                        <li data-filter-content="6">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-10.png",
                                 "name": "Аржа Сузана Абдер Насыр",
@@ -162,7 +165,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="6">
+                        <li data-filter-content="7">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-11.png",
                                 "name": "Юлия Игоревна Дмитренко",
@@ -172,7 +175,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="6">
+                        <li data-filter-content="7">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-12.png",
                                 "name": "Мария Олеговна Джураева ",
@@ -202,17 +205,20 @@
                             <a href="#" class="btn btn--second " data-filter-trigger="3">Ортодонты</a>
                         </li>
                         <li>
-                            <a href="#" class="btn btn--second " data-filter-trigger="4">Имплантологи</a>
+                            <a href="#" class="btn btn--second " data-filter-trigger="4">Имплантологи</a> 
                         </li>
                         <li>
-                            <a href="#" class="btn btn--second " data-filter-trigger="5">Ассистенты</a>
+                            <a href="#" class="btn btn--second " data-filter-trigger="5">Врачи</a>
                         </li>
                         <li>
-                            <a href="#" class="btn btn--second " data-filter-trigger="6">Администраторы</a>
+                            <a href="#" class="btn btn--second " data-filter-trigger="6">Ассистенты</a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn btn--second " data-filter-trigger="7">Админы</a>
                         </li>
                     </ul>
                     <ul class="team-list">
-                        <li data-filter-content="0,1,2,4">
+                        <li data-filter-content="0,1,2,4,5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-1.png",
                                 "name": "Саид Гаджиевич Шахаев",
@@ -222,7 +228,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="3">
+                        <li data-filter-content="3,5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-2.png",
                                 "name": "Нина Владимировна Перельштейн",
@@ -232,7 +238,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="0,2">
+                        <li data-filter-content="0,2,5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-3.png",
                                 "name": "Керим Гаджимагомедович Гасанов ",
@@ -242,7 +248,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="0">
+                        <li data-filter-content="0,5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-4.png",
                                 "name": "Мария Вячеславовна Екимова (Гогия)",
@@ -252,7 +258,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="0">
+                        <li data-filter-content="0,5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-5.png",
                                 "name": "Зарина Муратовна Маргиева",
@@ -262,7 +268,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="1,2">
+                        <li data-filter-content="1,2.5">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-6.png",
                                 "name": "Имима Гаджимагомедович Магомедов ",
@@ -272,7 +278,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="5">
+                        <li data-filter-content="6">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-7.png",
                                 "name": "Наргиз Теймуровна Яхьяева ",
@@ -282,7 +288,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="5">
+                        <li data-filter-content="6">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-8.png",
                                 "name": "Илона Валерьевна Ростова ",
@@ -292,7 +298,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="5">
+                        <li data-filter-content="6">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-9.png",
                                 "name": "Алиса Дмитриевна Кондакова ",
@@ -302,7 +308,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="5">
+                        <li data-filter-content="6">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-10.png",
                                 "name": "Аржа Сузана Абдер Насыр",
@@ -312,7 +318,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="6">
+                        <li data-filter-content="7">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-11.png",
                                 "name": "Юлия Игоревна Дмитренко",
@@ -322,7 +328,7 @@
                                 "buttonText": "Подробнее о враче"
                             })
                         </li>
-                        <li data-filter-content="6">
+                        <li data-filter-content="7">
                             @@include('common/team-card/_team-card.html', {
                                 "img": "img/photo/team-card-img-12.png",
                                 "name": "Мария Олеговна Джураева ",
