--- a/#src/common/certificates/_certificates.html
+++ b/#src/common/certificates/_certificates.html
@@ -1,4 +1,4 @@
-<section class="certificates padding-wrap" data-slider="certificates">
+<section class="certificates padding-wrap" id="anchor2" data-slider="certificates">
     <div class="container">
         <h3 class="certificates__title">Сертификаты</h3>
         <div class="certificates__body">
