--- a/#src/team-detail.html
+++ b/#src/team-detail.html
@@ -22,34 +22,36 @@
             <div class="container-md">
                 <div class="team-detail__row">
                     <div class="team-detail-head">
-                        <div class="team-detail-head__bg"></div>
-                        <div class="team-detail-head__col-1">
+                        <div class="team-detail-head__inner">
+                            <div class="team-detail-head__bg"></div>
                             <h2 class="team-detail-head__title">Мария Вячеславовна Екимова</h2>
                             <div class="team-detail-head__subtitle text">
                                 Врач стоматолог-терапевт <br>
                                 Опыт работы 8 лет
                             </div>
-                            <div class="team-detail-head__tags">
-                                <div class="team-detail-head__tag">Поет в караоке</div>
-                                <div class="team-detail-head__tag">Играет в шахматы</div>
+                            <div class="team-detail-head__img-wrap">
+
+                                <div class="team-detail-head__img">
+                                    <img src="img/photo/team-detail-head-img.png" alt="">
+                                </div>
                             </div>
+                            <a href="#" class="team-detail-head__btn btn btn--dark">Записаться на прием</a>
+
                             <div class="team-detail-head__address">
                                 <svg>
                                     <use xlink:href="img/icons/sprites.svg#local"></use>
                                 </svg>
                                 Врач принимает по адресу Большая Пороховская, 47
                             </div>
-                            <a href="#" class="team-detail-head__btn btn btn--dark" data-da=".team-detail-head__col-1,767.98,2">Записаться на прием</a>
-                        </div>
-                        <div class="team-detail-head__col-2">
-                            <div class="team-detail-head__img" data-da=".team-detail-head__col-1,767.98,2">
-                                <img src="img/photo/team-detail-head-img.png" alt="">
+                            <div class="team-detail-head__tags">
+                                <div class="team-detail-head__tag">Поет в караоке</div>
+                                <div class="team-detail-head__tag">Играет в шахматы</div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="team-detail__row">
-                    <div class="box">
+                    <div class="box links-group-wrap">
                         <ul class="links-group">
                             <li>
                                 <a href="#anchor1">Образование</a>
@@ -72,7 +74,13 @@
                                         <h3>Образование</h3>
                                         <h5>Высшее образование</h5>
                                         <p>
-                                            Мария Вячеславовна окончила Санкт-Петербургский Государственный Педиатрический медицинский университет. Ещё в 2017 году Мария Вячеславовна выбрала нашу клинику для начала своего пути к профессии врача-стоматолога. Начиная с работы ассистента стоматолога, еще будучи студенткой, она прошла весь путь, учась у лучших стоматологов города. За это время она получила огромную базу знаний, так как всю теорию, изученную в университете, она подкрепляла практикой на стоматологическом приёме.
+                                            Мария Вячеславовна окончила Санкт-Петербургский Государственный
+                                            Педиатрический медицинский университет. Ещё в 2017 году Мария Вячеславовна
+                                            выбрала нашу клинику для начала своего пути к профессии врача-стоматолога.
+                                            Начиная с работы ассистента стоматолога, еще будучи студенткой, она прошла
+                                            весь путь, учась у лучших стоматологов города. За это время она получила
+                                            огромную базу знаний, так как всю теорию, изученную в университете, она
+                                            подкрепляла практикой на стоматологическом приёме.
                                         </p>
 
                                         <h5>
@@ -80,12 +88,15 @@
                                         </h5>
 
                                         <ul>
-                                            <li>Dentsply Sirona Academy: «Эстетическая реставрация боковой группы зубов»</li>
-                                            <li>Северная Каролина: «Современный взгляд на профессиональную гигиену полости рта»</li>
-                                            <li>Philips Zoom!: «Курс по отбеливанию зубов по технологиям Philips Zoom! Chairside, DayWhite, NiteWhite»</li>
+                                            <li>Dentsply Sirona Academy: «Эстетическая реставрация боковой группы зубов»
+                                            </li>
+                                            <li>Северная Каролина: «Современный взгляд на профессиональную гигиену
+                                                полости рта»</li>
+                                            <li>Philips Zoom!: «Курс по отбеливанию зубов по технологиям Philips Zoom!
+                                                Chairside, DayWhite, NiteWhite»</li>
                                             <li>Dentsply Sirona Academy: «Секреты повторной эндодонтии»</li>
                                         </ul>
-                                        
+
                                         <figure>
                                             <img src="img/photo/text-img-2.jpg" alt="">
                                         </figure>
@@ -96,7 +107,7 @@
                         <div class="main-grid__side-column">
                             <div class="main-grid__sticky-box">
                                 @@include('common/cta-card/_cta-card.html', {
-                                    "title": "Рассчитать стоимость лечения"
+                                "title": "Рассчитать стоимость лечения"
                                 })
                             </div>
                         </div>
@@ -107,19 +118,19 @@
 
         @@include('common/certificates/_certificates.html')
 
-        <div class="padding-wrap">
+        <div class="padding-wrap" id="anchor3">
             <div class="container-md">
                 <div class="head">
                     <h3 class="head__title ">Отзывы</h3>
                 </div>
                 @@include('common/testimonials/_testimonials.html', {
-                    "type": "type-2"
+                "type": "type-2"
                 })
             </div>
         </div>
 
         @@include('common/cta/_cta.html', {
-            "img": "img/photo/cta-img-4.png"
+        "img": "img/photo/cta-img-4.png"
         })
     </main>
 
