--- a/#src/testimonials.html
+++ b/#src/testimonials.html
@@ -13,7 +13,7 @@
     })
     <!-- == // TOP LINE ================== -->
 
-    <main class="_page home-page" data-padding-top-header-size>
+    <main class="_page" data-padding-top-header-size>
         @@include('common/breadcrumbs/_breadcrumbs.html', {
         "arr": ['<a href="#">Home</a>', 'Врачи']
         })
@@ -93,7 +93,7 @@
             </div>
         </div>
 
-        <div class="padding-wrap" data-tabs>
+        <div class="testimonial-list-wrap padding-wrap" data-tabs>
             <div class="container-md">
                 <div class="head head--sm">
                     <h3 class="head__title ">Отзывы с независимых ресурсов</h3>
