--- a/#src/articles.html
+++ b/#src/articles.html
@@ -83,7 +83,7 @@
                                                     Время чтения: 5 минут
                                                 </li>
                                             </ul>
-                                            @@include('common/rating/_rating.html', "value": "5")
+                                            @@include('common/rating/_rating.html', {"value": "5"})
                                         </div>
                                     </div>
                                     <a href="#" class="article-card__read-more">Читать</a>
@@ -125,7 +125,7 @@
                                                     Время чтения: 10 минут
                                                 </li>
                                             </ul>
-                                            @@include('common/rating/_rating.html', "value": "5")
+                                            @@include('common/rating/_rating.html', {"value": "5"})
                                         </div>
                                     </div>
                                     <a href="#" class="article-card__read-more">Читать</a>
@@ -167,7 +167,7 @@
                                                     Время чтения: 5 минут
                                                 </li>
                                             </ul>
-                                            @@include('common/rating/_rating.html', "value": "5")
+                                            @@include('common/rating/_rating.html', {"value": "5"})
                                         </div>
                                     </div>
                                     <a href="#" class="article-card__read-more">Читать</a>
@@ -209,7 +209,7 @@
                                                     Время чтения: 6 минут
                                                 </li>
                                             </ul>
-                                            @@include('common/rating/_rating.html', "value": "5")
+                                            @@include('common/rating/_rating.html', {"value": "5"})
                                         </div>
                                     </div>
                                     <a href="#" class="article-card__read-more">Читать</a>
@@ -251,7 +251,7 @@
                                                     Время чтения: 5 минут
                                                 </li>
                                             </ul>
-                                            @@include('common/rating/_rating.html', "value": "5")
+                                            @@include('common/rating/_rating.html', {"value": "5"})
                                         </div>
                                     </div>
                                     <a href="#" class="article-card__read-more">Читать</a>
@@ -293,7 +293,7 @@
                                                     Время чтения: 10 минут
                                                 </li>
                                             </ul>
-                                            @@include('common/rating/_rating.html', "value": "5")
+                                            @@include('common/rating/_rating.html', {"value": "5"})
                                         </div>
                                     </div>
                                     <a href="#" class="article-card__read-more">Читать</a>
