--- a/#src/articles-detail.html
+++ b/#src/articles-detail.html
@@ -68,29 +68,7 @@
                         <div class="article-hero__bottom-mob"></div>
                     </div>
                 </div>
-                <div class="main-grid main-grid--col-3 main-grid--not-hide-side-column-left">
-                    <div class="main-grid__side-column ">
-                        <div class="main-grid__sticky-box">
-                            <div class="box checked-by">
-                                <div class="checked-by__title">Статья проверена доктором:</div>
-                                <div class="checked-by__body">
-                                    <div class="checked-by__photo ibg">
-                                        <img src="img/photo/portfolio-team-img-1.jpg" alt="">
-                                    </div>
-                                    <div class="checked-by__inner">
-                                        <div class="checked-by__name">Саид Гаджиевич Шахаев</div>
-                                        <div class="checked-by__position">
-                                            Врач стоматолог-ортопед, хирург-имплантолог, терапевт
-                                        </div>
-                                        <a href="#" class="checked-by__link">Подробнее о враче</a>
-                                        <a href="#" class="checked-by__link">
-                                            Все статьи, проверенные доктором
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="main-grid main-grid--not-hide-side-column">
                     <div class="main-grid__content">
                         <div class="main-grid__content-row">
                             <div class="box box--has-text">
@@ -282,6 +260,24 @@
                     </div>
                     <div class="main-grid__side-column">
                         <div class="main-grid__sticky-box">
+                            <div class="box checked-by">
+                                <div class="checked-by__title">Статья проверена доктором:</div>
+                                <div class="checked-by__body">
+                                    <div class="checked-by__photo ibg">
+                                        <img src="img/photo/portfolio-team-img-1.jpg" alt="">
+                                    </div>
+                                    <div class="checked-by__inner">
+                                        <div class="checked-by__name">Саид Гаджиевич Шахаев</div>
+                                        <div class="checked-by__position">
+                                            Врач стоматолог-ортопед, хирург-имплантолог, терапевт
+                                        </div>
+                                        <a href="#" class="checked-by__link">Подробнее о враче</a>
+                                        <a href="#" class="checked-by__link">
+                                            Все статьи, проверенные доктором
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                             @@include('common/cta-card/_cta-card.html', {
                             "title": "Запишитесь к врачу"
                             })
