--- a/#src/services-detail.html
+++ b/#src/services-detail.html
@@ -68,7 +68,7 @@
                             </div>
                         </div>
                         <div id="anchor1" class="main-grid__content-row">
-                            <div class="box box--has-text">
+                            <div class="box box--has-text box--big-padding">
                                 <div class="text-content last">
                                     <h3>Показания к проведению процедуры</h3>
                                     <p>
@@ -99,7 +99,7 @@
                             @@include('common/board/_board.html')
                         </div>
                         <div id="anchor2" class="main-grid__content-row">
-                            <div class="box box--has-text">
+                            <div class="box box--has-text box--big-padding">
                                 <div class="text-content last">
                                     <h3>Протезирование зубов: виды и стоимость</h3>
                                     <figure>
